--- a/css/universal.css
+++ b/css/universal.css
@@ -46,5 +46,8 @@ nav.navbar-nav div.navbar-container div.navbar-brand img {
     font-size: 2vw;
 }
 div.container {
-    margin-top: 5vw;
+    margin-top: 6vw;
+}
+h1.page-title {
+    text-align: center;
 }
