--- a/css/universal.css
+++ b/css/universal.css
@@ -12,12 +12,13 @@ nav.navbar-nav {
     position: sticky;
     margin: 0;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0;
+    width: 100vw;
     height: 5vw;
     margin-bottom: 5vw;
+}
+img.headerimg {
+    width: 100vw;
+    height: auto;
 }
 nav.navbar-nav div.navbar-container {
     display: flex;
