--- a/css/universal.css
+++ b/css/universal.css
@@ -4,6 +4,10 @@
     src: url(../fonts/DancingScript-Regular.ttf);
     font-family: Dancing Script
 }
+html {
+    margin: 0;
+    padding: 0;
+}
 body {
     background-color: #bdbdbd;
 }
