--- a/css/universal.css
+++ b/css/universal.css
@@ -5,8 +5,9 @@
     font-family: Dancing Script
 }
 html {
-    margin: 0;
-    padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 body {
     background-color: #bdbdbd;
