--- a/css/universal.css
+++ b/css/universal.css
@@ -15,6 +15,9 @@ nav.navbar-nav {
     width: 100%;
     height: 5vw;
     margin-bottom: 5vw;
+    margin-top: -10px;
+    top: 0;
+    left: 0;
 }
 img.headerimg {
     width: 100%;
